Hice cambios en el frontend y algunos cambios en el backend, revisalo con calma

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Actualizar",
         "Agregar",
         "Asegúrate",
+        "Asignar",
         "Cambiado",
         "Cambios",
         "cargar",
@@ -25,6 +26,7 @@
         "datos",
         "Datos",
         "declararlo",
+        "defecto",
         "descripcion",
         "Editar",
         "Electronico",
@@ -42,6 +44,7 @@
         "lugar",
         "nombre",
         "Nombre",
+        "proporciona",
         "registrado",
         "Registrarse",
         "Registro",
