ya el login, register, head, menu-left, footer, welcome tienen el frontend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,8 @@
         "escenarios",
         "Escenarios",
         "fecha",
+        "fontawesome",
+        "fortawesome",
         "Guardar",
         "Importa",
         "importar",
