--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,13 @@
           "backdrop-filter"
         ]
       }
-    ]
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ],
+    "no-inline-styles": "off"
   }
 }
