--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,7 +26,14 @@
                 "output": "/assets/"
               }
             ],
-            "styles": ["src/theme.less", "src/styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/theme.less",
+              "src/styles.css",
+              "src/assets/bootstrap/css/bootstrap-grid.rtl.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -80,7 +87,10 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css"
+            ],
             "scripts": []
           }
         },
