--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,18 +14,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.6",
+    "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.0.6",
     "@angular/compiler": "^17.0.6",
     "@angular/core": "^17.0.6",
     "@angular/forms": "^17.0.6",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.0.6",
     "@angular/platform-browser-dynamic": "^17.0.6",
     "@angular/router": "^17.0.6",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "@swimlane/ngx-charts": "^20.4.1",
+    "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^17.0.1",
     "ngx-color-picker": "^15.0.0",
