ya hice el visualizar, revisa el componente data no muestra los datos recolectados

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
-    "@swimlane/ngx-charts": "^20.4.1",
+    "@swimlane/ngx-charts": "^20.5.0",
+    "angular-gauge": "^5.0.0",
     "bootstrap-icons": "^1.11.3",
+    "d3": "^7.9.0",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^17.0.1",
     "ngx-color-picker": "^15.0.0",
