--- a/.hintrc
+++ b/.hintrc
@@ -17,6 +17,8 @@
         "button-name": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/forms": "off",
+    "button-type": "off"
   }
 }
