--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,11 +30,14 @@
     "@popperjs/core": "^2.11.6",
     "@swimlane/ngx-charts": "^20.5.0",
     "angular-gauge": "^5.0.0",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "d3": "^7.9.0",
+    "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
-    "ng-zorro-antd": "^17.0.1",
+    "ng-zorro-antd": "^17.4.1",
     "ngx-color-picker": "^15.0.0",
+    "ngx-gauge": "^9.0.0",
     "ngx-mask": "^16.3.9",
     "ngx-permissions": "^16.0.1",
     "ngx-spinner": "^16.0.2",
@@ -52,10 +55,12 @@
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.6",
     "@angular/localize": "^17.0.6",
+    "@types/bootstrap": "^5.2.10",
     "@types/d3-scale": "^4.0.6",
     "@types/d3-selection": "^3.0.8",
     "@types/d3-shape": "^3.1.4",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.30",
     "@types/lodash": "^4.14.200",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -66,7 +71,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "node-sass": "^9.0.0",
     "prettier": "^3.1.0",
+    "sass": "^1.77.6",
     "typescript": "~5.2.2"
   }
 }
